src/objects/NQT_Product__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Group__c</fullName>
        <label>Legacy Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQT_In_Group__c</fullName>
        <inlineHelpText>Please select a value</inlineHelpText>
        <label>In Group</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NQT_Inventory_Status__c</fullName>
        <inlineHelpText>Enter the Inventory Status</inlineHelpText>
        <label>Inventory Status</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NQT_Product_Description__c</fullName>
        <inlineHelpText>Please enter Description</inlineHelpText>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NQT_Standard_Price__c</fullName>
        <inlineHelpText>Please enter a value</inlineHelpText>
        <label>Standard Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <externalId>true</externalId>
        <label>Product Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NQT Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NQT_Product_Description__c</columns>
        <columns>NQT_In_Group__c</columns>
        <columns>NQT_Standard_Price__c</columns>
        <columns>NQT_Active__c</columns>
        <columns>NQT_Inventory_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>0</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>